--- a/index.html
+++ b/index.html
@@ -168,16 +168,16 @@
 
                         <ul class="dropdown-menu">
                             <li>
-                                <a class="dropdown-item" href="#">Giấy dán tường cao cấp</a>
+                                <a class="dropdown-item" href="#products">Giấy dán tường cao cấp</a>
                             </li>
                             <li>
-                                <a class="dropdown-item" href="#">Giấy dán tường vân gỗ</a>
+                                <a class="dropdown-item" href="#products">Giấy dán tường vân gỗ</a>
                             </li>
                             <li>
-                                <a class="dropdown-item" href="#">Giấy dán tường giả đá </a>
+                                <a class="dropdown-item" href="#products">Giấy dán tường giả đá </a>
                             </li>
                             <li>
-                                <a class="dropdown-item" href="#">Giấy dán tường giả trơn</a>
+                                <a class="dropdown-item" href="#products">Giấy dán tường giả trơn</a>
                             </li>
                         </ul>
                     </div>
