--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                         </svg>
                     </button>
 
-                    <a class="d-lg-none" href="/">
+                    <a class="d-lg-none">
                         <img height="60" src="./assets/images/logo.jpg" />
                     </a>
 
@@ -154,7 +154,7 @@
     <nav class="d-none d-xl-flex bg-white shadow-sm">
         <div class="container py-1">
             <div class="d-flex justify-content-between align-items-center">
-                <a href="/">
+                <a>
                     <img height="60" src="./assets/images/logo.jpg" />
                 </a>
 
