--- a/index.html
+++ b/index.html
@@ -101,9 +101,9 @@
                         </div>
 
                         <div class="px-5 d-flex gap-3">
-                            <a>Giới thiệu</a>
-                            <a>Khuyến mãi</a>
-                            <a>Giảm giá đặc biệt</a>
+                            <a href="">Giới thiệu</a>
+                            <a href="">Khuyến mãi</a>
+                            <a href="">Giảm giá đặc biệt</a>
                         </div>
                     </div>
 
@@ -160,7 +160,7 @@
                 </a>
 
                 <div class="px-5 d-flex gap-3">
-                    <a class="text-decoration-none text-black fw-normal">TRANG CHỦ </a>
+                    <a class="text-decoration-none text-black fw-normal" href="">TRANG CHỦ </a>
                     <div class="dropdown">
                         <a class="text-decoration-none text-black fw-normal dropdown-toggle" href="#" role="button"
                             data-bs-toggle="dropdown" aria-expanded="false">
@@ -182,9 +182,9 @@
                             </li>
                         </ul>
                     </div>
-                    <a class="text-decoration-none text-black fw-normal">BỘ SƯU TẬP</a>
-                    <a class="text-decoration-none text-black fw-normal">ẢNH THI CÔNG</a>
-                    <a class="text-decoration-none text-black fw-normal">TƯ VẪN MẪU</a>
+                    <a class="text-decoration-none text-black fw-normal" href="">BỘ SƯU TẬP</a>
+                    <a class="text-decoration-none text-black fw-normal" href="">ẢNH THI CÔNG</a>
+                    <a class="text-decoration-none text-black fw-normal" href="">TƯ VẪN MẪU</a>
 
 
                 </div>
