--- a/gioithieu.html
+++ b/gioithieu.html
@@ -13,6 +13,12 @@
     <link rel="stylesheet" href="./assets/styles/rest.css">
     <link rel="icon" href="./assets/images/logoweb.png" type="image/x-icon">
     <link rel="shortcut icon" href="./assets/images/logoweb.png" type="image/x-icon">
+    <style>
+        .text {
+            line-height: 1.5;
+            font-size: 20px;
+        }
+    </style>
 </head>
 
 <body>
@@ -72,7 +78,7 @@
                                     <a href="khuyenmai.html">Khuyến mãi</a>
                                 </li>
                                 <li class="py-1 fw-500 border-bottom">
-                                    <a href="giamgiadacbiet.html">Giảm giá đặc biệt</a>
+                                    <a>Giảm giá đặc biệt</a>
                                 </li>
 
                             </ul>
@@ -104,7 +110,7 @@
                         <div class="px-5 d-flex gap-3">
                             <a href="gioithieu.html">Giới thiệu</a>
                             <a href="khuyenmai.html">Khuyến mãi</a>
-                            <a href="giamgiadacbiet.html">Giảm giá đặc biệt</a>
+                            <a href="">Giảm giá đặc biệt</a>
                         </div>
                     </div>
 
@@ -162,7 +168,7 @@
                 </a>
 
                 <div class="px-5 d-flex gap-3">
-                    <a class="text-decoration-none text-black fw-normal" href="">TRANG CHỦ </a>
+                    <a class="text-decoration-none text-black fw-normal" href="index.html">TRANG CHỦ </a>
                     <div class="dropdown">
                         <a class="text-decoration-none text-black fw-normal dropdown-toggle" href="#" role="button"
                             data-bs-toggle="dropdown" aria-expanded="false">
@@ -205,59 +211,91 @@
             </div>
         </div>
     </nav>
-
     <main>
-        <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel" data-bs-interval="2000">
-            <div class="banner carousel-inner">
-                <div class="carousel-item active">
-                    <img src="./assets/images/banner_1.jpg" alt="banner1">
-                </div>
-                <div class="carousel-item">
-                    <img src="./assets/images/banner_2.jpg" alt="banner2">
-                </div>
-                <div class="carousel-item">
-                    <img src="./assets/images/banner_3.jpg" alt="banner3">
-                </div>
+        <div class="banner">
+            <img src="./assets/images/banner4.jpg" alt="banner4">
 
+        </div>
+        <div class="h3 container p-2 text">
+            <p>LỊCH SỬ HÌNH THÀNH <br>
+                <span> Ra đời từ ý tưởng tạo nên sự khác biệt giữ
+                    vững và phát
+                    triển trở thành vị trí hàng đầu trong thị trường nội thất Việt Nam. Đến nay đã có nhiều
+                    cửa hàng quy mô và chuyên nghiệp
+                    tại các thành phố lớn là Hà Nội và TP.HCM, Bình Dương.</span>
+            </p>
+            <div class="row">
+                <div class="col-md-5">
+                    <img src="./assets/images/gt1.jpg" alt="" width="500px" height="700px">
+
+                </div>
+                <div class="col-md-7">
+                    <p><b>2021:</b>Khẳng định thương hiệu bền vững với những bước phát triển
+                        mới dù đối mặt những khó
+                        khăn do dịch bệnh Covid. Hệ thống cửa hàng mở rộng, với showroom mới tại Bình Dương.</p>
+
+                    <p><b>2022:</b>Mở rộng hệ thống với 2 cửa hàng lớn ở ngay
+                        trung tâm thủ đô Hà Nội thuộc quận Hoàn Kiếm và quận Đống Đa.</p>
+                    <p><b>1999:</b>Ra đời với 2 cửa hàng lớn tại Hà Nội và TP.HCM, mang đậm phong cách riêng về thiết kế
+                        và cách bày trí.</p>
+                </div>
+            </div>
+            <div class="row p-2">
+                <div class="col-md-5">
+                    <img src="./assets/images/gt2.jpg" alt="" width="500px" height="700px">
+
+                </div>
+                <div class="col-md-7">
+                    <b>Giá trị và sự khác biệt</b>
+                    <div>
+                        <p>Với mong muốn phát triển thương hiệu Việt
+                            bằng nội lực, Nhà Xinh đã chú trọng vào thiết kế và sản xuất nội thất trong nước. Danh mục
+                            sản
+                            phẩm của Nhà Xinh thường xuyên được đổi mới và cập nhật, liên tục cung cấp cho khách hàng
+                            các
+                            dòng sản phẩm theo xu hướng mới nhất.
+                            Do chính người Việt thiết kế và sản xuất, nội thất
+                            thương
+                            hiệu Nhà Xinh luôn phù hợp với cuộc sống Á Đông, đem đến sự tiện nghi hoàn hảo trong mọi
+                            không
+                            gian sống.</p>
+                        <p>Hơn 70% sản phẩm của Nhà Xinh được thiết kế, sản xuất bởi đội ngũ nhân viên cùng công nhân ưu
+                            tú
+                            với nhà máy có cơ sở vật chất hiện đại bậc nhất tại Việt Nam.</p>
+                        <p> Sự khác biệt của Nhà Xinh chính là sáng tạo nội thất thành phong cách riêng, phù hợp với nhu
+                            cầu
+                            khách hàng. Không chỉ là sản phẩm nội thất đơn thuần, mà còn là không gian sống theo phong
+                            cách
+                            riêng với cách bày trí hài hòa từ đồ nội thất kết hợp với đồ trang trí. Giúp khách hàng cảm
+                            nhận
+                            được một không gian sống thực sự, cảm thấy thoải mái để tận hưởng cuộc sống.</p>
+                    </div>
+
+
+
+                </div>
             </div>
         </div>
+        <!-- / -->
+        <script>
+            window.addEventListener("offline", () => alert("Hãy kết nối internet."))
+            window.onload = function () {
+                showAlert();
+            };
 
 
-        <div class="container py-5">
-            <h3 class="td">Sản Phẩm</h3>
-            <div class="row row-cols-1 row-cols-lg-4 g-4" id="products">
-            </div>
-        </div>
-    </main>
 
-    <footer>
-        <div>
-            Bản quyền bởi &copy; Nguyễn Minh Phúc-Nguyễn Thanh Hiếu &copy; 2023
-        </div>
+            const toggleToggleSidebar = () => {
+                const sidebar = document.getElementById("mobile-sidebar")
+                const hidden = sidebar.classList.contains("d-none")
+                sidebar.classList.toggle("d-none", !hidden)
+            }
 
-    </footer>
+            document.getElementById("toggle-sidebar").addEventListener("click", toggleToggleSidebar)
+            document.getElementById("mobile-sidebar").addEventListener("click", toggleToggleSidebar) 
+        </script>
 
-    <script>
-        window.addEventListener("offline", () => alert("Hãy kết nối internet."))
-        window.onload = function () {
-            showAlert();
-        };
-
-        function showAlert() {
-            alert("Đồ án Thiết Kế Web Nguyễn Minh Phúc-Nguyễn Thanh Hiếu");
-        }
-
-        const toggleToggleSidebar = () => {
-            const sidebar = document.getElementById("mobile-sidebar")
-            const hidden = sidebar.classList.contains("d-none")
-            sidebar.classList.toggle("d-none", !hidden)
-        }
-
-        document.getElementById("toggle-sidebar").addEventListener("click", toggleToggleSidebar)
-        document.getElementById("mobile-sidebar").addEventListener("click", toggleToggleSidebar) 
-    </script>
-
-    <script src="./assets/js/main.js"></script>
+        <script src="./assets/js/main.js"></script>
 </body>
 
 </html>
