--- a/giamgiadacbiet.html
+++ b/giamgiadacbiet.html
@@ -13,6 +13,12 @@
     <link rel="stylesheet" href="./assets/styles/rest.css">
     <link rel="icon" href="./assets/images/logoweb.png" type="image/x-icon">
     <link rel="shortcut icon" href="./assets/images/logoweb.png" type="image/x-icon">
+    <style>
+        .text {
+            line-height: 1.5;
+            font-size: 20px;
+        }
+    </style>
 </head>
 
 <body>
@@ -162,7 +168,7 @@
                 </a>
 
                 <div class="px-5 d-flex gap-3">
-                    <a class="text-decoration-none text-black fw-normal" href="">TRANG CHỦ </a>
+                    <a class="text-decoration-none text-black fw-normal" href="index.html">TRANG CHỦ </a>
                     <div class="dropdown">
                         <a class="text-decoration-none text-black fw-normal dropdown-toggle" href="#" role="button"
                             data-bs-toggle="dropdown" aria-expanded="false">
@@ -205,59 +211,64 @@
             </div>
         </div>
     </nav>
-
     <main>
-        <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel" data-bs-interval="2000">
-            <div class="banner carousel-inner">
-                <div class="carousel-item active">
-                    <img src="./assets/images/banner_1.jpg" alt="banner1">
-                </div>
-                <div class="carousel-item">
-                    <img src="./assets/images/banner_2.jpg" alt="banner2">
-                </div>
-                <div class="carousel-item">
-                    <img src="./assets/images/banner_3.jpg" alt="banner3">
-                </div>
+        <div class="row p-2 ">
+            <div class="col-md-4">
+                <img src="assets/images/sale2.jpg" alt="" width="700px" class="img-fluid">
+            </div>
+            <div class="col-md-8 p-2">
+                <p>🎉🏠 Ưu đãi Cực Kỳ Đặc Biệt: GIẢM GIÁ 70% cho Giấy Gián Tường - Chỉ trong 1 Ngày! 🏠🎉</p>
+
+                <p>Chào mừng bạn đến với ngày hội mua sắm "Trang trí tổ ấm"! Để chào mừng mùa hè, chúng tôi tự hào giới
+                    thiệu chương trình khuyến mãi cực kỳ hấp dẫn. Chỉ trong 1 ngày duy nhất, bạn sẽ có cơ hội sở hữu
+                    Giấy
+                    Gián Tường chất lượng cao với mức giảm giá KHỦNG - 70%!</p>
+
+                <p>🏡 Bạn đang tìm cách làm mới không gian sống? Giấy gián tường là giải pháp hoàn hảo để thay đổi diện
+                    mạo
+                    cho căn nhà của bạn. Từ những họa tiết đơn giản, trừu tượng đến những hình ảnh sống động, chúng tôi
+                    có
+                    đủ các lựa chọn để bạn có thể tạo nên không gian sống hoàn hảo theo phong cách riêng.</p>
+
+                <p>🛋️ Hãy tận dụng cơ hội này để biến những ý tưởng trang trí thành hiện thực mà không cần phải lo lắng
+                    về
+                    ngân sách. Chúng tôi cam kết mang đến cho bạn sự hài lòng với sản phẩm chất lượng và mức giá không
+                    thể
+                    tốt hơn.</p>
+
+                <p>⏰ Thời gian ưu đãi có hạn - chỉ diễn ra trong 1 ngày duy nhất. Đừng bỏ lỡ cơ hội để thay đổi không
+                    gian
+                    sống của bạn một cách độc đáo và tiết kiệm lớn. Ghé thăm trang web của chúng tôi hoặc đến cửa hàng
+                    gần
+                    bạn để trải nghiệm những mẫu mã đẹp mắt và chọn cho mình những tấm giấy gián tường ưng ý nhất.</p>
+
+                <p>Ưu đãi chỉ áp dụng trong 1 ngày, hãy nhanh tay để không bỏ lỡ! 🛍️🏠</p>
 
             </div>
         </div>
 
 
-        <div class="container py-5">
-            <h3 class="td">Sản Phẩm</h3>
-            <div class="row row-cols-1 row-cols-lg-4 g-4" id="products">
-            </div>
-        </div>
-    </main>
 
-    <footer>
-        <div>
-            Bản quyền bởi &copy; Nguyễn Minh Phúc-Nguyễn Thanh Hiếu &copy; 2023
-        </div>
+        <!-- / -->
+        <script>
+            window.addEventListener("offline", () => alert("Hãy kết nối internet."))
+            window.onload = function () {
+                showAlert();
+            };
 
-    </footer>
 
-    <script>
-        window.addEventListener("offline", () => alert("Hãy kết nối internet."))
-        window.onload = function () {
-            showAlert();
-        };
 
-        function showAlert() {
-            alert("Đồ án Thiết Kế Web Nguyễn Minh Phúc-Nguyễn Thanh Hiếu");
-        }
+            const toggleToggleSidebar = () => {
+                const sidebar = document.getElementById("mobile-sidebar")
+                const hidden = sidebar.classList.contains("d-none")
+                sidebar.classList.toggle("d-none", !hidden)
+            }
 
-        const toggleToggleSidebar = () => {
-            const sidebar = document.getElementById("mobile-sidebar")
-            const hidden = sidebar.classList.contains("d-none")
-            sidebar.classList.toggle("d-none", !hidden)
-        }
+            document.getElementById("toggle-sidebar").addEventListener("click", toggleToggleSidebar)
+            document.getElementById("mobile-sidebar").addEventListener("click", toggleToggleSidebar) 
+        </script>
 
-        document.getElementById("toggle-sidebar").addEventListener("click", toggleToggleSidebar)
-        document.getElementById("mobile-sidebar").addEventListener("click", toggleToggleSidebar) 
-    </script>
-
-    <script src="./assets/js/main.js"></script>
+        <script src="./assets/js/main.js"></script>
 </body>
 
 </html>
