--- a/gioithieu.html
+++ b/gioithieu.html
@@ -216,14 +216,13 @@
             <img src="./assets/images/banner4.jpg" alt="banner4">
 
         </div>
-        <div class="h3 container p-2 text">
-            <p>LỊCH SỬ HÌNH THÀNH <br>
-                <span> Ra đời từ ý tưởng tạo nên sự khác biệt giữ
-                    vững và phát
-                    triển trở thành vị trí hàng đầu trong thị trường nội thất Việt Nam. Đến nay đã có nhiều
-                    cửa hàng quy mô và chuyên nghiệp
-                    tại các thành phố lớn là Hà Nội và TP.HCM, Bình Dương.</span>
-            </p>
+        <div class="container p-2 text">
+            <span class="h3">LỊCH SỬ HÌNH THÀNH </span>
+            <p> Ra đời từ ý tưởng tạo nên sự khác biệt giữ
+                vững và phát
+                triển trở thành vị trí hàng đầu trong thị trường nội thất Việt Nam. Đến nay đã có nhiều
+                cửa hàng quy mô và chuyên nghiệp
+                tại các thành phố lớn là Hà Nội và TP.HCM, Bình Dương.</p>
             <div class="row">
                 <div class="col-md-5">
                     <img src="./assets/images/gt1.jpg" alt="" width="500px" height="700px">
@@ -246,56 +245,63 @@
 
                 </div>
                 <div class="col-md-7">
-                    <b>Giá trị và sự khác biệt</b>
-                    <div>
-                        <p>Với mong muốn phát triển thương hiệu Việt
-                            bằng nội lực, Nhà Xinh đã chú trọng vào thiết kế và sản xuất nội thất trong nước. Danh mục
-                            sản
-                            phẩm của Nhà Xinh thường xuyên được đổi mới và cập nhật, liên tục cung cấp cho khách hàng
-                            các
-                            dòng sản phẩm theo xu hướng mới nhất.
-                            Do chính người Việt thiết kế và sản xuất, nội thất
-                            thương
-                            hiệu Nhà Xinh luôn phù hợp với cuộc sống Á Đông, đem đến sự tiện nghi hoàn hảo trong mọi
-                            không
-                            gian sống.</p>
-                        <p>Hơn 70% sản phẩm của Nhà Xinh được thiết kế, sản xuất bởi đội ngũ nhân viên cùng công nhân ưu
-                            tú
-                            với nhà máy có cơ sở vật chất hiện đại bậc nhất tại Việt Nam.</p>
-                        <p> Sự khác biệt của Nhà Xinh chính là sáng tạo nội thất thành phong cách riêng, phù hợp với nhu
-                            cầu
-                            khách hàng. Không chỉ là sản phẩm nội thất đơn thuần, mà còn là không gian sống theo phong
-                            cách
-                            riêng với cách bày trí hài hòa từ đồ nội thất kết hợp với đồ trang trí. Giúp khách hàng cảm
-                            nhận
-                            được một không gian sống thực sự, cảm thấy thoải mái để tận hưởng cuộc sống.</p>
-                    </div>
+                    <span class="h3">Giá trị và sự khác biệt</span>
 
+                    <p>Với mong muốn phát triển thương hiệu Việt
+                        bằng nội lực, Nhà Xinh đã chú trọng vào thiết kế và sản xuất nội thất trong nước. Danh mục
+                        sản
+                        phẩm của Nhà Xinh thường xuyên được đổi mới và cập nhật, liên tục cung cấp cho khách hàng
+                        các
+                        dòng sản phẩm theo xu hướng mới nhất.
+                        Do chính người Việt thiết kế và sản xuất, nội thất
+                        thương
+                        hiệu Nhà Xinh luôn phù hợp với cuộc sống Á Đông, đem đến sự tiện nghi hoàn hảo trong mọi
+                        không
+                        gian sống.</p>
+                    <p>Hơn 70% sản phẩm của Nhà Xinh được thiết kế, sản xuất bởi đội ngũ nhân viên cùng công nhân ưu
+                        tú
+                        với nhà máy có cơ sở vật chất hiện đại bậc nhất tại Việt Nam.</p>
+                    <p> Sự khác biệt của Nhà Xinh chính là sáng tạo nội thất thành phong cách riêng, phù hợp với nhu
+                        cầu
+                        khách hàng. Không chỉ là sản phẩm nội thất đơn thuần, mà còn là không gian sống theo phong
+                        cách
+                        riêng với cách bày trí hài hòa từ đồ nội thất kết hợp với đồ trang trí. Giúp khách hàng cảm
+                        nhận
+                        được một không gian sống thực sự, cảm thấy thoải mái để tận hưởng cuộc sống.</p>
+    </main>
 
-
-                </div>
-            </div>
+    <footer>
+        <div>
+            Bản quyền bởi &copy; Nguyễn Minh Phúc-Nguyễn Thanh Hiếu &copy; 2023
         </div>
-        <!-- / -->
-        <script>
-            window.addEventListener("offline", () => alert("Hãy kết nối internet."))
-            window.onload = function () {
-                showAlert();
-            };
+
+    </footer>
 
 
 
-            const toggleToggleSidebar = () => {
-                const sidebar = document.getElementById("mobile-sidebar")
-                const hidden = sidebar.classList.contains("d-none")
-                sidebar.classList.toggle("d-none", !hidden)
-            }
+    </div>
+    </div>
+    </div>
+    <!-- / -->
+    <script>
+        window.addEventListener("offline", () => alert("Hãy kết nối internet."))
+        window.onload = function () {
+            showAlert();
+        };
 
-            document.getElementById("toggle-sidebar").addEventListener("click", toggleToggleSidebar)
-            document.getElementById("mobile-sidebar").addEventListener("click", toggleToggleSidebar) 
-        </script>
 
-        <script src="./assets/js/main.js"></script>
+
+        const toggleToggleSidebar = () => {
+            const sidebar = document.getElementById("mobile-sidebar")
+            const hidden = sidebar.classList.contains("d-none")
+            sidebar.classList.toggle("d-none", !hidden)
+        }
+
+        document.getElementById("toggle-sidebar").addEventListener("click", toggleToggleSidebar)
+        document.getElementById("mobile-sidebar").addEventListener("click", toggleToggleSidebar) 
+    </script>
+
+    <script src="./assets/js/main.js"></script>
 </body>
 
 </html>
